# Codewords

./: .gitignore  README.md  comments.txt  default.nix  todos.txt
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Codewords.hs  Protocol.hs  Route.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
static/: nouns.txt
