name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , aeson
               , containers
               , text
               , random
               , frontend
               , lens
               , obelisk-backend
               , obelisk-route
               , safe
               , stm
               , websockets
               , websockets-snap
  exposed-modules:
    Backend
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-show-valid-hole-fits -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -O

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
