name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
  exposed-modules:
    Common.Api
    Common.Route
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -fno-show-valid-hole-fits -Wincomplete-uni-patterns -Wpartial-fields -O
