name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , containers
               , obelisk-frontend
               , obelisk-route
               , ilist
               , jsaddle
               , lens
               , reflex
               , reflex-dom
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , text
  if impl(ghcjs)
    build-depends: ghcjs-base

  exposed-modules:
    Frontend
  ghc-options: -Wall -fno-show-valid-hole-fits -fno-warn-unused-do-bind -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
